objects/IATSPayment__IATS_Account__c.object
<CustomObject>
    <description>Utilized to track IATS accounts (client codes)</description>
    <fields>
        <fullName>IATSPayment__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Click the box if this code will be used with the BW Virtual Terminal. All iATS Client Codes to be used within BW or Aura should be added, but only those you want visible within the Virtual Terminal need to be Active. You can have up to 10 Active Accounts.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Client_Code__c</fullName>
        <inlineHelpText>Enter the Client Code that was issued by iATS upon setup of your Merchant Account.</inlineHelpText>
        <label>Client Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Currency__c</fullName>
        <inlineHelpText>Select the appropriate “iATS System” and “Currency” for the iATS Merchant Account. Choose “NA” if the Account has been setup to accept CAD or USD. Choose “UK” if the Account has been setup to accept any other currency.</inlineHelpText>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IATSPayment__IATS_System__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Australia Dollar</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>EURO</fullName>
                </value>
                <value>
                    <fullName>New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>Swiss Franc</fullName>
                </value>
                <value>
                    <fullName>UK Pound</fullName>
                </value>
                <value>
                    <fullName>US Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATSPayment__Description__c</fullName>
        <inlineHelpText>Add a description of the iATS Account for future reference. For example, “Aura Online”.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Direct_Debit_Processor__c</fullName>
        <description>Used to determine the UK Direct Debit processor the client has their merchant account with at iATS Payments.</description>
        <inlineHelpText>For UK Pound currency Direct Debit merchant account use ONLY. Please select the applicable Bureau your iATS Account is processing with. If unsure, please contact iATS Payments Customer Care.</inlineHelpText>
        <label>Direct Debit Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>IATSPayment__IATS_System__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Smart Debit</fullName>
                </value>
                <value>
                    <fullName>Rapidata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATSPayment__Do_Not_Include_in_Journal_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Optional: iATS Accounts cannot be deleted once used to create iATS Customer Codes or iATS Transactions. To remove an iATS Account from the Nightly Download Journal import, check this checkbox. This should only be used for an iATS Account that is disabled.</inlineHelpText>
        <label>Do Not Include in Journal Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATSPayment__IATS_System__c</fullName>
        <inlineHelpText>Select the appropriate “iATS System” and “Currency” for the iATS Merchant Account. Choose “NA” if the Account has been setup to accept CAD or USD. Choose “UK” if the Account has been setup to accept any other currency.</inlineHelpText>
        <label>iATS System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATSPayment__Password__c</fullName>
        <inlineHelpText>Enter the Password associated to the Client Code that was issued by iATS upon setup of your Merchant Account. If the password is changed in the future, it will need to be updated here to avoid iATS connection problems.</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATSPayment__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The Primary checkbox enables one iATS Account to be displayed as the default Account within the Brickwork Virtual Terminal.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>iATS Merchant Account</label>
    <listViews>
        <fullName>IATSPayment__All_Brickwork_IATS_Accounts</fullName>
        <columns>NAME</columns>
        <columns>IATSPayment__Active__c</columns>
        <columns>IATSPayment__Do_Not_Include_in_Journal_Download__c</columns>
        <columns>IATSPayment__Client_Code__c</columns>
        <columns>IATSPayment__IATS_System__c</columns>
        <columns>IATSPayment__Currency__c</columns>
        <columns>IATSPayment__Description__c</columns>
        <columns>IATSPayment__Primary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>iATS Merchant Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iATS Merchant Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IATSPayment__Client_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
LEN(IATSPayment__Password__c) &gt; 15, 
OR(
ISPICKVAL(IATSPayment__IATS_System__c,&apos;NA&apos;) == FALSE,
ISPICKVAL(IATSPayment__Currency__c, &apos;US Dollar&apos;) == FALSE))</errorConditionFormula>
        <errorMessage>The currency must be set to &apos;US Dollar&apos; and the iATS System to &apos;NA&apos; based on your client code and password.</errorMessage>
    </validationRules>
</CustomObject>